增加备案号

--- a/custom/templates/footer.html
+++ b/custom/templates/footer.html
@@ -23,6 +23,11 @@
         @ {{Year}} <a href="https://github.com/chanyipiaomiao/devops-api">devops-api</a> 本站使用<a href="https://github.com/peachdocs/peach">Peach</a>构建
       </div>
     </div>
+    <div class="row">
+        <div class="center column">
+            <a href="http://www.miitbeian.gov.cn/" target="_blank">沪ICP备13047964号-2</a>
+        </div>
+    </div>
     </div>
   </div>
 </div>
