--- a/custom/templates/docs.html
+++ b/custom/templates/docs.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}{{Title}} - {{Tr(Lang, "name")}}{% endblock %}
+{% block title %}Devops API - 提供运维/开发常用操作的HTTP API{% endblock %}
 {% block body %}
 	<div class="ui inverted vertical center aligned segment">
 		{% include Page.NavbarTplPath %}
