--- a/custom/templates/base.html
+++ b/custom/templates/base.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta name="description" content="{{Site.Desc}}" />
-
+		<meta name="google-site-verification" content="pJaHKZ4p8S5hQbppSEnbdsoN_nnQcT3sgkgcDGpLH1k" />
 		<link rel="shortcut icon" href="/img/favicon.ico" />
 		<link href="/css/semantic.min.css?v={{AppVer}}" rel="stylesheet" />
 		<link href="/css/peach.css?v={{AppVer}}" rel="stylesheet" />
