--- a/custom/templates/home.html
+++ b/custom/templates/home.html
@@ -1,10 +1,9 @@
 {% extends "base.html" %}
 {% block title %}Devops API - 提供运维/开发常用操作的HTTP API{% endblock %}
 {% block body %}
-	<div class="ui inverted vertical masthead center aligned segment">
-	  {% include Page.NavbarTplPath %}
-
-		<div class="ui text container">
+		<div class="ui inverted vertical masthead center aligned segment">
+	  		{% include Page.NavbarTplPath %}
+			<div class="ui text container">
 				<p></p>
 				<p></p>
 				<br/>
@@ -13,6 +12,9 @@
 				</h1>
 				<h2>提供运维/开发常用操作的HTTP API</h2>
 				<a class="ui huge primary button" href="{{Page.DocsBaseURL}}">{{Tr(Lang, "home.get_started")}} <i class="right arrow icon"></i></a>
+				<p class="githubstar">
+					<iframe src="//ghbtns.com/github-btn.html?user=chanyipiaomiao&repo=devops-api&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
+				</p>
 			</div>
 		</div>
 	
