--- a/custom/templates/home.html
+++ b/custom/templates/home.html
@@ -13,7 +13,8 @@
 				<h2>提供运维/开发常用操作的HTTP API</h2>
 				<a class="ui huge primary button" href="{{Page.DocsBaseURL}}">{{Tr(Lang, "home.get_started")}} <i class="right arrow icon"></i></a>
 				<p class="githubstar">
-					<iframe src="//ghbtns.com/github-btn.html?user=chanyipiaomiao&repo=devops-api&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
+					<iframe src="//ghbtns.com/github-btn.html?user=chanyipiaomiao&repo=devops-api&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="85" height="20"></iframe>
+					<iframe src="//ghbtns.com/github-btn.html?user=chanyipiaomiao&repo=devops-api&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="85" height="20"></iframe>
 				</p>
 			</div>
 		</div>
